# phlag

./: CHANGELOG.md  README.md  TODO.md  ad.py  build.sh  discr.py  discretizer.py  hmm.py  logger.py  opti.py  phlag.py  pyproject.toml  qqs.py  qqs.pyx  requirements.txt  sag.py  sbag.py  setup.py  utils.py  vis.py
misc/: priors.nb
phlag/: fxy.py  hmm.py  main.py  qqs.py  utils.py
test/: check_output.py  info.txt  neoaves.nwk
test/population_increase_10X/: info.txt
test/recombination_suppression_default/: info.txt
