[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phlag"
version = "0.0.2"
description = "Detecting and flagging phylogenetic anomalies across the genome"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = "==3.9.*"
authors = [
    { name = "Ali Osman Berk Sapci" },
]
keywords = ["phylogenetics", "genomics", "HMM", "coalescent", "gene-trees"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "DendroPy==5.0.8",
    "dynamax==0.1.5",
    "jax==0.4.30",
    "jaxtyping==0.2.36",
    "scikit-bio==0.7.0",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "tensorflow-probability==0.25.0",
    "tqdm==4.66.5",
]

[project.urls]
Homepage = "https://github.com/bo1929/phlag"
Repository = "https://github.com/bo1929/phlag"

[project.scripts]
phlag = "phlag.main:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "test/emission.gtrees",
    "test/concat-*.gtrees",
]
